--- a/projeto3_pg.cbp
+++ b/projeto3_pg.cbp
@@ -43,6 +43,8 @@
 			<Add directory="D:\Instaladores\CB_4551_alleg - openGL\mingw\lib" />
 		</Linker>
 		<Unit filename="main.cpp" />
+		<Unit filename="vetor.cpp" />
+		<Unit filename="vetor.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
